--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
+    "@nx/angular": "16.0.1",
     "@sendgrid/mail": "^7.7.0",
     "@sentry/angular": "^7.33.0",
     "@sentry/node": "^7.33.0",
@@ -52,7 +53,7 @@
     "axios": "^1.2.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
@@ -66,8 +67,7 @@
     "tslib": "^2.3.0",
     "typeorm": "^0.3.10",
     "uuid": "^9.0.0",
-    "zone.js": "~0.11.4",
-    "@nx/angular": "16.0.1"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~15.2.0",
